# SDS-RAG-Tasks

./: .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: prompt_config.yaml
data/processed/: chunked_pdf_data.json  extracted_pdf_data.json
noteboks/: testing_of_text_extraction_method.ipynb
src/: chunking.py  embeddings_store.py  main.py  retrieval.py
