[project]
name = "sds-rag-tasks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain~= 0.3.26",
    "langchain_groq~=0.3.6",
    "langchain-groq",
    "langchain-core~=0.3.69",
    "python-dotenv~=1.1.1",
    "streamlit~=1.47.0",
    "qdrant-client",
    "langchain_google_genai",
    "google-ai-generativelanguage"
]
